Changed SubCatEnum to obtain proper subcat ID
